<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layering"
    android:padding="10dp"
    android:gravity="center"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    >

    <!--Page Naming-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/second_view_title"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        />

    <!--Members Names an RAs-->
    <!--Member-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/member_0"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="18sp"
        />

    <!--RA-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/member_0_ra"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="12sp"
        />

    <!--Member-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/member_1"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="18sp"
        />

    <!--RA-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/member_1_ra"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="12sp"
        />

    <!--Member-->
    <TextView
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/member_2"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="18sp"
        />

    <!--RA-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/member_2_ra"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="12sp"
        />

    <!--Return to Home page Button-->
    <Button
        android:id="@+id/bt_return"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="@drawable/button_styling"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/button_back"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:clickable="true"
        android:textSize="25sp"
        />

</LinearLayout>