<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layering"
    android:padding="10dp"
    android:gravity="center"
    android:hapticFeedbackEnabled="true"
    android:orientation="vertical"
    >

    <!--App Greeting-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/home_screen_greeting"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        />

    <!--Password Generator-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/home_screen_call"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        />

    <!--Password Parametrization-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/key_parametrization"
        android:textAlignment="center"
        android:textColor="@color/interface_text_color"
        android:textSize="18sp"
        />

    <!--Upper Case letters - selector-->
    <CheckBox
        android:id="@+id/upperCaseSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:button="@drawable/checkbox_style"
        android:checked="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="7dp"
        android:text="@string/upper_case_letters"
        android:textColor="@color/interface_text_color" />

    <!--Lower Case letters - selector-->
    <CheckBox
        android:id="@+id/lowerCaseCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:button="@drawable/checkbox_style"
        android:checked="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="7dp"
        android:text="@string/lower_case_letters"
        android:textColor="@color/interface_text_color"
        />

    <!--Digit characters - selector-->
    <CheckBox
        android:id="@+id/digitsCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:button="@drawable/checkbox_style"
        android:checked="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="7dp"
        android:text="@string/digits"
        android:textColor="@color/interface_text_color"
        />

    <!--Punctuation characters - selector-->
    <CheckBox
        android:id="@+id/punctuationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:button="@drawable/checkbox_style"
        android:checked="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:padding="7dp"
        android:text="@string/punctuation"
        android:textColor="@color/interface_text_color"
        />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="@drawable/button_styling"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/button_text"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="generate"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/generatedKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textIsSelectable="true"
        android:selectAllOnFocus="true"
        />

</LinearLayout>