<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="#00FFFFFF"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/interface_bg_gradient"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp">

        <!--Upper Case letters - selector-->
        <CheckBox
            android:id="@+id/upperCaseSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox_style"
            android:checked="true"
            android:fontFamily="@font/poppins_semibold"
            android:paddingBottom="5dp"
            android:text="@string/upper_case_letters"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <!--Lower Case letters - selector-->
        <CheckBox
            android:id="@+id/lowerCaseCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox_style"
            android:checked="true"
            android:fontFamily="@font/poppins_semibold"
            android:padding="5dp"
            android:text="@string/lower_case_letters"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <!--Digit characters - selector-->
        <CheckBox
            android:id="@+id/digitsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox_style"
            android:checked="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:padding="5dp"
            android:text="@string/digits"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />

        <!--Punctuation characters - selector-->
        <CheckBox
            android:id="@+id/punctuationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox_style"
            android:checked="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_semibold"
            android:padding="5dp"
            android:text="@string/punctuation"
            android:textColor="@color/dark_grey"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>